--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
+    "react-calendar": "^2.18.1",
+    "react-clock": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
